# python-text-extraction-libs-benchmarks

./: .ai-rulez.yaml  .gitignore  .pre-commit-config.yaml  .uncommentrc.toml  ARCHITECTURE.md  BENCHMARKING_DESIGN.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLI_GUIDE.md  FRAMEWORK_FORMAT_SUPPORT.md  KREUZBERG_3_8_0VS3_7_0_PERF.md  KREUZBERG_PERFORMANCE_REPORT.md  KREUZBERG_TESTING_GUIDE.md  README.md  ai-rulez.yaml  benchmark_metrics.json  commitlint.config.js  fixed-aggregated-results.json  installation_sizes.json  kreuzberg_benchmark_output.txt  last_run_results_summary.md  load_and_analyze.py  main.py  pyproject.toml  run_kreuzberg_async_benchmarks.sh  taskfile.yaml
.github/workflows/: benchmark-by-framework.yml  benchmark-by-framework.yml.bak  benchmarks.yml  ci.yml  comprehensive-benchmarks.yml  deploy-pages.yml  publish-reports.yml  quick-benchmark.yml  table-extraction-benchmark.yml  update-frameworks.yml
aggregated-results/: aggregated_results.json  all_summaries.json
all-results/benchmark-docling-medium-16246049967/: benchmark_failure.json
all-results/benchmark-docling-small-16246049967/: benchmark_summaries.json
all-results/benchmark-docling-tiny-16246049967/: benchmark_summaries.json  enhanced_benchmark_results.json
all-results/benchmark-extractous-medium-16246049967/: benchmark_summaries.json
all-results/benchmark-extractous-small-16246049967/: benchmark_summaries.json
all-results/benchmark-extractous-tiny-16246049967/: benchmark_summaries.json  enhanced_benchmark_results.json
all-results/benchmark-kreuzberg_async-medium-16246049967/: benchmark_summaries.json
all-results/benchmark-kreuzberg_async-small-16246049967/: benchmark_summaries.json
all-results/benchmark-kreuzberg_async-tiny-16246049967/: benchmark_summaries.json  enhanced_benchmark_results.json
all-results/benchmark-kreuzberg_sync-medium-16246049967/: benchmark_summaries.json
all-results/benchmark-kreuzberg_sync-small-16246049967/: benchmark_summaries.json
all-results/benchmark-markitdown-tiny-16246049967/: benchmark_failure.json
all-results/benchmark-unstructured-medium-16246049967/: benchmark_summaries.json
all-results/benchmark-unstructured-small-16246049967/: benchmark_summaries.json
all-results/benchmark-unstructured-tiny-16246049967/: benchmark_summaries.json  enhanced_benchmark_results.json
deployment-artifacts/github-pages/: artifact.tar
deployment-fixed/: index.html
deployment-fixed/visualizations/: interactive_dashboard_enhanced.html  summary_metrics.json
downloads/aggregated-benchmark-results-16679747153/: aggregated_results.json
downloads/benchmark-docling-medium-16679747153/: benchmark_failure.json
downloads/benchmark-docling-small-16679747153/: benchmark_summaries.json
downloads/benchmark-docling-tiny-16679747153/: benchmark_summaries.json  enhanced_benchmark_results.json
downloads/benchmark-extractous-huge-16679747153/: benchmark_summaries.json  enhanced_benchmark_results.json
downloads/benchmark-extractous-large-16679747153/: benchmark_summaries.json  enhanced_benchmark_results.json
downloads/benchmark-extractous-medium-16679747153/: benchmark_summaries.json
downloads/benchmark-extractous-small-16679747153/: benchmark_summaries.json
downloads/benchmark-extractous-tiny-16679747153/: benchmark_summaries.json  enhanced_benchmark_results.json
downloads/benchmark-kreuzberg_async-huge-16679747153/: benchmark_summaries.json
downloads/benchmark-kreuzberg_async-large-16679747153/: benchmark_summaries.json
downloads/benchmark-kreuzberg_async-medium-16679747153/: benchmark_summaries.json
downloads/benchmark-kreuzberg_async-small-16679747153/: benchmark_summaries.json
downloads/benchmark-kreuzberg_async-tiny-16679747153/: benchmark_summaries.json  enhanced_benchmark_results.json  installation_sizes.json
downloads/benchmark-kreuzberg_sync-huge-16679747153/: benchmark_summaries.json
downloads/benchmark-kreuzberg_sync-large-16679747153/: benchmark_summaries.json
downloads/benchmark-kreuzberg_sync-medium-16679747153/: benchmark_summaries.json
file_type_analysis/: interactive_dashboard.html  performance_insights.md
final_comparison/: benchmark_results.json  benchmark_summaries.json
fixed-visualizations/: interactive_dashboard_enhanced.html  summary_metrics.json
kreuzberg_comparison/: benchmark_results.json  benchmark_summaries.json
latest-reports/: benchmark_metrics.json  benchmark_report.html  benchmark_report.md
latest-results/: aggregated_results.json  all_summaries.json
latest-visualizations/: summary_metrics.json
local-aggregated/: aggregated_results.json  all_summaries.json
local-reports/: benchmark_report.md
local-test-results/: benchmark_results.json  benchmark_summaries.json
local-test-results-async/: benchmark_results.json  benchmark_summaries.json
metadata_analysis/: metadata_analysis_summary.md
ocr_comparison/: benchmark_results.json  benchmark_summaries.json
pages/: index.html
pages-update/: large-huge-performance.html
pages-update/data/: aggregated_results.json  (+1 more)
python_text_extraction_benchmarks/: cli.py  extractors.py  profiler.py  reporting.py  types.py
reports/: benchmark_metrics.json  benchmark_report.md
results/: benchmark_summaries.json
src/: __init__.py  aggregate.py  benchmark.py  categorizer.py  check_installation_sizes.py  cli.py  config.py  enhanced_report.py  extractors.py  file_type_analysis.py  generate_index.py  html_report.py  interactive_dashboard.py  metadata_analysis.py  profiler.py  quality_assessment.py  report.py  reporting.py  table_analysis.py  types.py  update_readme.py  visualize.py
table-test-results/: benchmark_results.json  benchmark_summaries.json
test-reports/: benchmark_metrics.json  benchmark_report.html
test-results/: benchmark_summaries.json
test-visualizations/: interactive_dashboard_enhanced.html
test_visualizations/: summary_metrics.json
tests/: __init__.py  aggregation_test.py  comprehensive_bugs_test.py  conftest.py  field_mapping_test.py  serialization_bugs_test.py  test_aggregation.py  test_calculations.py  test_imports.py  visualization_test.py
(+99 files in other folders)
